--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>LibreOffice</title>
-    <link rel="stylesheet" type="text/css" href=""> <script type="text/javascript" src="CSS.css"></script>
+    <link rel="stylesheet" type="text/css" href="CSS.css"> <script type="text/javascript" src="CSS.css"></script>
       <br>
     <center>
    <img src="https://wiki.documentfoundation.org/images/thumb/0/01/LibreOffice_Mimetype_Icon_Draft2_Ivan.png/400px-LibreOffice_Mimetype_Icon_Draft2_Ivan.png"  width="400"
@@ -12,8 +12,9 @@
         <a href="https://youtu.be/3KC0ZdcA6s8"><s></s>Her</a> kan du få hjælp til brug af LibreOffice
     </center>
   </head>
-
   <body>
+
+
   <br>
   <hr>
 
