--- a/Side 1.html
+++ b/Side 1.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="CSS.css"> <script type="text/javascript" src="javascript.js"></script>
   </head>
     <body>
-<a href="startside.html">Tilbage til forsiden</a>
+<a href="index.html">Tilbage til forsiden</a>
 
 <br>
 
