--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
        <div class="column" style="background-color:#8FBC8F;">
 
            <h4>Kontakt os</h4>
-           <p><b>e-mail: </b><a href="mailto:silv0155@g.nagym.dk">silv0155@g.nagym.dk</a>
+           <p><b>E-mail: </b><a href="mailto:silv0155@g.nagym.dk">silv0155@g.nagym.dk</a>
            <br>
-           <b>nummer: </b>+45 53 33 55 53
+           <b>Nummer: </b>+45 53 33 55 53
            <br>
-           <b>adresse: </b>Nærum Hovedgade 30, 2850 Nærum
+           <b>Adresse: </b>Nærum Hovedgade 30, 2850 Nærum
          </p>
        </div>
    </div>
