--- a/Side 2.html
+++ b/Side 2.html
@@ -5,10 +5,16 @@
     <link rel="stylesheet" type="text/css" href="CSS.css"> <script type="text/javascript" src="javascript.js"></script>
   </head>
     <body>
-<a href="index.html">Tilbage til forsiden</a>
 
 <br>
 
+<ul>
+  <li><a href="index.html">Startside</a></li>
+  <li><a href="side 1.html">Writer</a></li>
+  <li><a href="side 2.html">Calc</a></li>
+  <li><a href="side 3.html">Impress</a></li>
+</ul>
+      
 <center><h2>Om LibreOffice's Regneark-program</h2></center>
 
 
