--- a/Side 3.html
+++ b/Side 3.html
@@ -5,10 +5,17 @@
     <link rel="stylesheet" type="text/css" href="CSS.css"> <script type="text/javascript" src="javascript.js"></script>
   </head>
     <body>
-<a href="index.html">Tilbage til forsiden</a>
+
 
 <br>
 
+<ul>
+  <li><a href="index.html">Startside</a></li>
+  <li><a href="side 1.html">Writer</a></li>
+  <li><a href="side 2.html">Calc</a></li>
+  <li><a href="side 3.html">Impress</a></li>
+</ul>
+      
 <center><h2>Om LibreOffice's Præsentation-program</h2></center>
 Impress er i sandhed et fantastisk værktøj til at skabe interaktive præsentationer. Dine præsentationer vil stå frem med 2D- og 3D-clipart, særlige effekter, animationer og et smart tegneværktøj.
 <br>
