--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
     </center>
   </head>
   <body>
-
+<ul>
+  <li><a href="index.html">Startside</a></li>
+  <li><a href="side 1.html">Writer</a></li>
+  <li><a href="side 2.html">Calc</a></li>
+  <li><a href="side 3.html">Impress</a></li>
+</ul>
 
   <br>
   <hr>
