--- a/Side 2.html
+++ b/Side 2.html
@@ -44,7 +44,7 @@ Calc understøtter flere samtidige brugere. Ved at dele et regneark kan flere br
 Du er naturligvis også velkommen til at benytte gamle Microsoft Excel-regneark eller gemme dine nye regneark i Excelformat eller gemme i Portable Document Format (.pdf) – uden at du behøver at købe ekstra software. Calc kan læse og skrive regneark i .xlsx-format.
 
 <br>
-<h5><a href="https://www.youtube.com/watch?v=JIBWOjeiptA"><s></s>Her</a> kan du få hjælp til at bruge LibreOffice's regneark-program</h5>
+<h5><a href="https://www.youtube.com/watch?v=nl-nXjJurhQ"><s></s>Her</a> kan du få hjælp til at bruge LibreOffice's regneark-program</h5>
 
     </body>
 </html>
