--- a/Side 3.html
+++ b/Side 3.html
@@ -36,7 +36,7 @@ Diasanimation giver præsentationen liv. Fontwork giver dig fantastisk 2D- og 3D
 
 Du er naturligvis også velkommen til at benytte det gamle Microsoft Powerpoint-format eller gemme i Portable Document Format (.pdf) – uden at du behøver at købe ekstra software. Du har også mulighed for at gemme din præsentation som Flash (.swf).
 <br>
-<h5><a href="https://www.youtube.com/watch?v=JIBWOjeiptA"><s></s>Her</a> kan du få hjælp til at bruge LibreOffice's præsentation-program</h5>
+<h5><a href="https://www.youtube.com/watch?v=vR7yVoPn2bs"><s></s>Her</a> kan du få hjælp til at bruge LibreOffice's præsentation-program</h5>
 
     </body>
 </html>
