--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         height="200">
         <br>
         LibreOffice er en omfattende og professionel kontorpakke, som du kan hente og installere gratis, uden frygt for krænkelse af ophavsretten. Der er en stor base af tilfredse LibreOffice-brugere på verdensplan, og programmet er tilgængeligt på mere end 100 sprog og til alle større operativsystemer, herunder Microsoft Windows, Mac OS X og GNU / Linux.
-        <a href="https://youtu.be/3KC0ZdcA6s8"><s></s>Her</a> kan du få hjælp til brug af LibreOffice
+        Her kan du få hjælp til brug af LibreOffice
     </center>
   </head>
   <body>
