--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <html>
+<script type="text/javascript">
+confirm("Vil du gerne vinde?");
+if (confirm("Vil du gerne vinde en tur til LibraOffice?")) {
+  open("tyv.html", "Fair nok");}
+</script>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>LibreOffice</title>
