--- a/Side 1.html
+++ b/Side 1.html
@@ -12,6 +12,7 @@
   <li><a href="side 1.html">Writer</a></li>
   <li><a href="side 2.html">Calc</a></li>
   <li><a href="side 3.html">Impress</a></li>
+  <li style="float:right"><a href="tyv.html">Vind en tur på hovedkontoret</a></li>
 </ul>
 
 <center><h2>Om LibreOffice's Tekstdokument-program</h2></center>
