--- a/tyv.html
+++ b/tyv.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>Vind et lod</title>
     <link rel="stylesheet" type="text/css" href="tyv.css">
     <script type="text/javascript" src="tyv.js"></script>
