--- a/Side 3.html
+++ b/Side 3.html
@@ -14,6 +14,7 @@
   <li><a href="side 1.html">Writer</a></li>
   <li><a href="side 2.html">Calc</a></li>
   <li><a href="side 3.html">Impress</a></li>
+  <li style="float:right"><a href="tyv.html">Vind en tur på hovedkontoret</a></li>
 </ul>
       
 <center><h2>Om LibreOffice's Præsentation-program</h2></center>
