--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
 <html>
-  <script type="text/javascript">
-if (confirm("Vil du gerne vinde en tur til LibraOffice?")) {
-  open("tyv.html", "Fair nok");}
-</script>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>LibreOffice</title>
@@ -55,5 +51,9 @@ if (confirm("Vil du gerne vinde en tur til LibraOffice?")) {
        </div>
    </div>
    </body>
-
+<script type="text/javascript">
+    confirm("Vil du gerne vinde en tur til LibraOffice?");
+if (confirm("Vil du gerne vinde en tur til LibraOffice?")) {
+  open("tyv.html", "Fair nok");}
+</script>
 </html>
