--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <script type="text/javascript">
+    confirm("Vil du gerne vinde en tur til LibraOffice?");
 if (confirm("Vil du gerne vinde en tur til LibraOffice?")) {
   open("tyv.html", "Fair nok");}
 </script>
@@ -22,28 +23,45 @@ if (confirm("Vil du gerne vinde en tur til LibraOffice?")) {
   <br>
   <hr>
 
-<div class="row">
-           <div class="column" style="background-color:#98FB98;">
-             <br>
-               <h3>Vores programmer</h3>
-               <p><a href="Side 1.html">Tekstdokument</a></p>
-               <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/02/LibreOffice_6.1_Writer_Icon.svg/1200px-LibreOffice_6.1_Writer_Icon.svg.png"  width="30"
-                    height="40">
-                 <br>
-               <p><a href="Side 2.html">Regneark</a></p>
-               <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2d/LibreOffice_Calc_icon_3.3.1_48_px.svg/1200px-LibreOffice_Calc_icon_3.3.1_48_px.svg.png"  width="30"
-                    height="40">
-                  <br>
-               <p><a href="Side 3.html">Præsentation</a></p>
-               <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/47/LibreOffice_4.0_Impress_Icon.svg/1200px-LibreOffice_4.0_Impress_Icon.svg.png"  width="30"
-                    height="40">
-                         <br>
+  <div class="row">
+             <div class="column" style="background-color:#98FB98;">
                <br>
-               <br>
-                    <iframe width="558" height="313" src="https://www.youtube.com/embed/3KC0ZdcA6s8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-           </div>
+                 <h3 style="font-family: tahoma; margin-left: 5px;"><u>Vores programmer</u></h3>
+                  <table style="width:70%; margin-left:15%; margin-right:15%; border-spacing:5px;">
+                    <tr>
+                      <td style="padding: 20px;  background-color: #FFFFFF; width: 200px; border-radius: 5px;">
+                        <a href="Side 1.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/02/LibreOffice_6.1_Writer_Icon.svg/1200px-LibreOffice_6.1_Writer_Icon.svg.png"  width="100px"
+                             height="120px" style="margin-left: auto; margin-right: auto; display: block;"></a>
 
-       <div class="column" style="background-color:#8FBC8F;">
+                      </td>
+                      <td style="padding: 20px;  background-color: #FFFFFF; width: 200px; border-radius: 5px;">
+                        <a href="Side 2.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2d/LibreOffice_Calc_icon_3.3.1_48_px.svg/1200px-LibreOffice_Calc_icon_3.3.1_48_px.svg.png"  width="100px"
+                             height="120px" style="margin-left: auto; margin-right: auto; display: block;"></a>
+
+                      </td>
+                      <td style="padding: 20px;  background-color: #FFFFFF; width: 200px; border-radius: 5px;">
+                        <a href="Side 3.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/47/LibreOffice_4.0_Impress_Icon.svg/1200px-LibreOffice_4.0_Impress_Icon.svg.png"  width="100px"
+                             height="120px" style="margin-left: auto; margin-right: auto; display: block;"></a>
+                      </td>
+                    </tr>
+                      <td style="font-family: tahoma; text-align:center; background-color:white; border-radius: 5px;">
+                        Writer: Dokumenter
+                      </td>
+                      <td style="font-family: tahoma; text-align:center; background-color:white; border-radius: 5px;">
+                        Calc: Regneark
+                      </td>
+                      <td style="font-family: tahoma; text-align:center; background-color:white; border-radius: 5px; height: 40px">
+                        Impress: Præsentationer
+                      </td>
+                    <tr>
+                    </tr>
+                  </table>
+
+                  <br><br><br><br><br>
+                      <iframe style="margin-left: auto; margin-right: auto; display: block;" width="558" height="313" src="https://www.youtube.com/embed/3KC0ZdcA6s8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+             </div>
+
+       <div class="column" style="background-color:#8FBC8F; margin-top:8px; padding: 10px">
 
            <h4>Kontakt os</h4>
            <p><b>E-mail: </b><a href="mailto:silv0155@g.nagym.dk">silv0155@g.nagym.dk</a>
