--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
    </div>
    </body>
   <script type="text/javascript">
-    if (confirm("Vil du gerne vinde en tur til LibraOffice?")) {
+    if (confirm("Vil du gerne vinde en tur til LibreOffice?")) {
   open("tyv.html", "Fair nok");}
 </script>
 
