--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
   <script type="text/javascript">
     if (confirm("Vil du gerne vinde en tur til LibreOffice?")) {
   open("tyv.html", "Fair nok");}
+    document.cookie = "visited=1";
+    alert(document.cookie)
 </script>
 
 </html>
