--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>LibreOffice</title>
-    <link rel="stylesheet" <script type="text/javascript" src="CSS.css"></script>
       <br>
     <center>
    <img src="https://wiki.documentfoundation.org/images/thumb/0/01/LibreOffice_Mimetype_Icon_Draft2_Ivan.png/400px-LibreOffice_Mimetype_Icon_Draft2_Ivan.png"  width="400"
@@ -15,7 +14,7 @@
   </head>
   <body>
 
-  
+
   <br>
   <hr>
 
@@ -69,11 +68,6 @@
        </div>
    </div>
    </body>
-  <script type="text/javascript">
-    if (confirm("Vil du gerne vinde en tur til LibreOffice?")) {
-  open("tyv.html", "Fair nok");}
-    document.cookie = "visited=1";
-    alert(document.cookie)
-</script>
+   <script src=index.js></script>
 
 </html>
