--- a/tyv.html
+++ b/tyv.html
@@ -3,7 +3,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>Vind et lod</title>
     <link rel="stylesheet" type="text/css" href="tyv.css">
-    <script type="text/javascript" src="tyv.js"></script>
   </head>
   <body>
   <br><br><br>
@@ -28,9 +27,20 @@
     <table align="center">
     <tr>
       <td width="150" class="start">
-        <button class="start" onclick="spil()">Try it</button>
+        <button class="start" onclick="spil()">Tryk her!</button>
       </td>
     </tr>
+    <tr>
+      <td width="150"><center>
+        <br>
+      Du har <br><p id="forsoeg" style="font-size:50px;display:inline">3</p><br> forsøg tilbage</center>
+    </td>
+    </tr>
     </table>
+<br>
+<center>  Her kan du deltage i vores konkurrence om at vinde en spændende tur til LibreOffices hovedkontor. Hvem ville ikke det!?
+  Bare tryk på knappen herover. </center>
+
+<script type="text/javascript" src="tyv.js"></script>
   </body>
 </html>
