--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
                   <table style="width:70%; margin-left:15%; margin-right:15%; border-spacing:5px;">
                     <tr>
                       <td style="padding: 20px;  background-color: #FFFFFF; width: 200px; border-radius: 5px;">
-                        <a href="Side 1.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/02/LibreOffice_6.1_Writer_Icon.svg/1200px-LibreOffice_6.1_Writer_Icon.svg.png"  width="100px"
+                        <a href="side 1.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/02/LibreOffice_6.1_Writer_Icon.svg/1200px-LibreOffice_6.1_Writer_Icon.svg.png"  width="100px"
                              height="120px" style="margin-left: auto; margin-right: auto; display: block;"></a>
 
                       </td>
                       <td style="padding: 20px;  background-color: #FFFFFF; width: 200px; border-radius: 5px;">
-                        <a href="Side 2.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2d/LibreOffice_Calc_icon_3.3.1_48_px.svg/1200px-LibreOffice_Calc_icon_3.3.1_48_px.svg.png"  width="100px"
+                        <a href="side 2.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2d/LibreOffice_Calc_icon_3.3.1_48_px.svg/1200px-LibreOffice_Calc_icon_3.3.1_48_px.svg.png"  width="100px"
                              height="120px" style="margin-left: auto; margin-right: auto; display: block;"></a>
 
                       </td>
                       <td style="padding: 20px;  background-color: #FFFFFF; width: 200px; border-radius: 5px;">
-                        <a href="Side 3.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/47/LibreOffice_4.0_Impress_Icon.svg/1200px-LibreOffice_4.0_Impress_Icon.svg.png"  width="100px"
+                        <a href="side 3.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/47/LibreOffice_4.0_Impress_Icon.svg/1200px-LibreOffice_4.0_Impress_Icon.svg.png"  width="100px"
                              height="120px" style="margin-left: auto; margin-right: auto; display: block;"></a>
                       </td>
                     </tr>
